adjust height of hamburger menu for horizontal bar charts
Former-commit-id: 041c6141774511a67d23623a682df8629fceb490

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+DONE - fixed hamburger Icon.
 DONE - get all the copyrights and put them in a directory
 DONE - Tuesday 10am do actual release to cz.  then rz.
 DONE - Spinner for MultiJupyter.
@@ -11,8 +12,10 @@ DONE - Check Libraries:
 - David's -> bug about bar charts reset not working in FF try to repro again.
 
 Next Release:
-- Test CZ/RZ for scatterPlot.  and message Matt that it's ready for inspection.
-- SCF testing checklist: Check Alternate user, and run setperms.shS
+- Do compression on sqs.layout_used figure out how to compress to less than 1K
+    * do URL encode and decode
+    * if loading, need to use the decode but don't overwrite their existing
+    * is it okay if the user overwrites their own saved charts?
 - Composite type: (work on estimate)
     * It's just a computed value based on multiple data attributes.
     * What would be involved in selecting multiple data attributes
@@ -21,6 +24,7 @@ Next Release:
 - LineGraph: Do proof of concept:
     * button which jumps to new page
     * make a lineChart with fake data and zooming ability.
+- SCF testing checklist: Check Alternate user, and run setperms.shS
 - make spot-dev email list.
     * https://llnl.servicenowservices.com/ess?id=ticket&table=sc_req_item&sys_id=015312ac1b82d050774e657fe54bcb69&view=sp
     * add people using bulk add.
