--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- verify that scatterPlots are up to play with before meeting.
 DONE - fixed hamburger Icon.
 DONE - get all the copyrights and put them in a directory
 DONE - Tuesday 10am do actual release to cz.  then rz.
@@ -12,19 +13,29 @@ DONE - Check Libraries:
 - David's -> bug about bar charts reset not working in FF try to repro again.
 
 Next Release:
-- LineGraph: Do proof of concept:
+- Update Documentation with saying what buttons are doing.
+DONE - LineGraph: Do proof of concept:
     * finish up memory button and showing the index page.
     * button which jumps to new page
     * make a lineChart with fake data and zooming ability.
-- Do compression on sqs.layout_used figure out how to compress to less than 1K
-    * do URL encode and decode
-    * if loading, need to use the decode but don't overwrite their existing
-    * is it okay if the user overwrites their own saved charts?
+    * Labels on the axis. (should get them from the file)
+    * Unit types "Mb/s"
+    * See if it supports being able to click on certain points.
+
+- Licenses:
+    * do i need to copy over the license directory to the new repo?
+    * Links at the bottom of the page.
 - Composite type: (work on estimate)
     * It's just a computed value based on multiple data attributes.
     * What would be involved in selecting multiple data attributes
     * are we sending this data to compare?  or does compare get it from the BE?
     * composite needs to be viewable in compare.
+- solving problem of if you create a new chart type, then how can other people see it
+    - Do compression on sqs.layout_used figure out how to compress to less than 1K
+    * do URL encode and decode
+    * if loading, need to use the decode but don't overwrite their existing
+    * is it okay if the user overwrites their own saved charts?
+
 - SCF testing checklist: Check Alternate user, and run setperms.shS
 - make spot-dev email list.
     * https://llnl.servicenowservices.com/ess?id=ticket&table=sc_req_item&sys_id=015312ac1b82d050774e657fe54bcb69&view=sp
