Refactor the switching display between the various chart types.  this will allow us to add and edit without problems with multiple different chart types
Former-commit-id: b4a075811264e06a90f21d174e108170a706a248

--- a/TODO
+++ b/TODO
@@ -13,7 +13,7 @@ DONE - Check Libraries:
 
 Next Release:
 * Links at the bottom of the page, need to be copied to github?
-- Update Documentation with saying what buttons are doing.
+DONE - Update Documentation with saying what buttons are doing.
 DONE - made some adjustments to the width and area on the left. See if marty approves.
 
 DONE - LineGraph: Do proof of concept:
