create multiple instances of the charts, such that they render one after another.
Former-commit-id: 2a6471f2338e8be2d40c940b81caf626f87c75c5

--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 Memory:
 DONE - Titles and Axis labels
 DONE - At the top of the chart, have a drop down which drops checkboxes with text next to it
-- allow checking/unchecking which combines all the line graphs on one chart.
-- Button to allow for another chart type.
+DONE - allow checking/unchecking which combines all the line graphs on one chart.
+DONE - Button to allow for another chart type.
+- create multiple instances when button is pressed.  have each check/uncheck belong to that instance.
+
 
 Next: Use Aliases instead of #strings.
 
