--- a/TODO
+++ b/TODO
@@ -3,13 +3,14 @@ DONE - Titles and Axis labels
 DONE - At the top of the chart, have a drop down which drops checkboxes with text next to it
 DONE - allow checking/unchecking which combines all the line graphs on one chart.
 DONE - Button to allow for another chart type.
-- create multiple instances when button is pressed.  have each check/uncheck belong to that instance.
-
+DONE - create multiple instances when button is pressed.  have each check/uncheck belong to that instance.
+        * Separate each chart instance and legend and checkbox instance correctly.
 
 Next: Use Aliases instead of #strings.
 
 Multi:
 - get rid of first dropdown.
+- populate the select drop down.
 - actually create the submit function which takes all the data and aggregates them according to the formula
     * all the operations involved in a new chart type: check/uncheck, edit.
 
