--- a/TODO
+++ b/TODO
@@ -1,8 +1,12 @@
-- attempt to build compare.js
+- attempt to build compare.js and actually make a change.
 
 Memory:
+- show alias instead of the coded attribute name.
+- only default on, based on the same units.
+    * need to figure out which ones have the same units and group them together.
 - see legend: instead put the unit there if they have the same units
 - on checkbox only re-render 1 graph, not the whole thing.
+    * this will prevent another bug that has to do with zooming/panning/using the plotly stuff.
 DONE - Titles and Axis labels
 DONE - At the top of the chart, have a drop down which drops checkboxes with text next to it
 DONE - allow checking/unchecking which combines all the line graphs on one chart.
