filter legend by unit type function to prepare for showing a legend based on the un type.
Former-commit-id: 341887ba99517cbd6fd3882401a55deff1387a27

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 - attempt to build compare.js and actually make a change.
 
 Memory:
-- show alias instead of the coded attribute name.
+DONE - show alias instead of the coded attribute name.
 - only default on, based on the same units.
     * need to figure out which ones have the same units and group them together.
 - see legend: instead put the unit there if they have the same units
