--- a/TODO
+++ b/TODO
@@ -3,10 +3,9 @@
 Memory:
 DONE - show alias instead of the coded attribute name.
 - only default on, based on the same units.
-    * Use actual David's new file which has data
+    DONE * Use actual David's new file which has data
+    * first plot render only show the things that are default checked.
     * add error message if the data is not present in the file.
-    * need to figure out which ones have the same units and group them together.
-- see legend: instead put the unit there if they have the same units
 - Use the file in the URL instead of hard coded.
 - on checkbox only re-render 1 graph, not the whole thing.
     * this will prevent another bug that has to do with zooming/panning/using the plotly stuff.
