--- a/TODO
+++ b/TODO
@@ -5,7 +5,7 @@ DONE - show alias instead of the coded attribute name.
 - only default on, based on the same units.
     DONE * Use actual David's new file which has data
     * first plot render only show the things that are default checked.
-    * add error message if the data is not present in the file.
+    DONE * add console error message if the data is not present in the file.
 - Use the file in the URL instead of hard coded.
 - on checkbox only re-render 1 graph, not the whole thing.
     * this will prevent another bug that has to do with zooming/panning/using the plotly stuff.
