--- a/TODO
+++ b/TODO
@@ -1,13 +1,16 @@
 - attempt to build compare.js and actually make a change.
 
 Memory:
-DONE - show alias instead of the coded attribute name.
-- only default on, based on the same units.
-    DONE * Use actual David's new file which has data
-    * first plot render only show the things that are default checked.
-    DONE * add console error message if the data is not present in the file.
+- when adding a plot, don't rerender all the existing plots, just add one new one.
+    * this causes a bug where everything gets rerendered.
+- Use alias in checkbox widget as well.
 - Use the file in the URL instead of hard coded.
-- on checkbox only re-render 1 graph, not the whole thing.
+DONE - show alias instead of the coded attribute name.
+DONE - only default on, based on the same units.
+    DONE * Use actual David's new file which has data
+    DONE * first plot render only show the things that are default checked.
+    DONE * add console error message if the data is not present in the file.
+DONE - on checkbox only re-render 1 graph, not the whole thing.
     * this will prevent another bug that has to do with zooming/panning/using the plotly stuff.
 DONE - Titles and Axis labels
 DONE - At the top of the chart, have a drop down which drops checkboxes with text next to it
