add operations warning if the operationss are not listed.  we no longer use default operations anymore.
Former-commit-id: 8ac66ea03e728ffdd1468c7abc03f16671f3ddca

--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+- check front light watt.
+- concat is important -> MOST important
+    * provide support for pieChart and horizontal bar chart for string based stuff.
+
+- Next step: Use actual files that are in the URL, rather than hard coded ones.
+- Perhaps generate new data sets
+    * get data sets that span nodes so we use real data.
+- Error handling if the data is not there yet.
 - attempt to build compare.js and actually make a change.
 - fix grunt server.
 
