add composite_chart capability to pie charts
Former-commit-id: 061657ca22d18f2c09847e5cf032d7e6bd94a3f4

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+- fix the grunt server so we can compile scss or just find command to do scss.
 - check front light watt.
 - concat is important -> MOST important
     * provide support for pieChart and horizontal bar chart for string based stuff.
