if attributes pound is not defined give it an empty object to initialize with so that we can error handle gracefully
Former-commit-id: 3c6653f6b0e1b8021f4902d0d655f139845910bd

--- a/TODO
+++ b/TODO
@@ -11,6 +11,8 @@
 - fix grunt server.
 
 Memory:
+- spot.py commit update to the file, path for the runSetId, now that we're able to receive the whole thing.
+    * still need to actually use that file instead of the stub.
 - when adding a plot, don't rerender all the existing plots, just add one new one.
     * this causes a bug where everything gets rerendered.
 DONE - Use alias in checkbox widget as well.
