--- a/TODO
+++ b/TODO
@@ -1,22 +1,19 @@
 - fix the grunt server so we can compile scss or just find command to do scss.
-- check front light watt.
+- Error handling if the data is not there yet.
+    * right now records.length is 0 and then there's no graph there.
+- add a test for the new directory we have of David's new data.
 - concat is important -> MOST important
     * provide support for pieChart and horizontal bar chart for string based stuff.
 
-- Next step: Use actual files that are in the URL, rather than hard coded ones.
-- Perhaps generate new data sets
-    * get data sets that span nodes so we use real data.
-- Error handling if the data is not there yet.
+DONE - Use actual files that are in the URL, rather than hard coded ones.
+- Generate new files using the attribute data.
 - attempt to build compare.js and actually make a change.
-- fix grunt server.
 
 Memory:
-- spot.py commit update to the file, path for the runSetId, now that we're able to receive the whole thing.
-    * still need to actually use that file instead of the stub.
+
 - when adding a plot, don't rerender all the existing plots, just add one new one.
     * this causes a bug where everything gets rerendered.
 DONE - Use alias in checkbox widget as well.
-- Use the file in the URL instead of hard coded.
 DONE - show alias instead of the coded attribute name.
 DONE - only default on, based on the same units.
     DONE * Use actual David's new file which has data
