remove randomization so that we can see the real data with no stub
Former-commit-id: 18d4c0cc4fad357e2c3d35e7788d57f326a4ee1f

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 - fix the grunt server so we can compile scss or just find command to do scss.
-- Error handling if the data is not there yet.
+DONE - Error handling if the data is not there yet.
     * right now records.length is 0 and then there's no graph there.
 - add a test for the new directory we have of David's new data.
 - concat is important -> MOST important
