--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 - fix the grunt server so we can compile scss or just find command to do scss.
-- when adding a plot, don't rerender all the existing plots, just add one new one.
-    * this causes a bug where everything gets rerendered.
+DONE - when adding a plot, don't rerender all the existing plots, just add one new one. * this causes a bug where everything gets rerendered.
 DONE - Error handling if the data is not there yet.    * right now records.length is 0 and then there's no graph there.
 - add a test for the new directory we have of David's new data.
 - concat is important -> MOST important
