refactor SCSS and CSS transpilation process, to allow for additional SCSS files
Former-commit-id: 124d2e7060c6d37fef33618e44dcfb22f6cf99ca

--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 - fix the grunt server so we can compile scss or just find command to do scss.
 DONE - when adding a plot, don't rerender all the existing plots, just add one new one. * this causes a bug where everything gets rerendered.
 DONE - Error handling if the data is not there yet.    * right now records.length is 0 and then there's no graph there.
-- add a test for the new directory we have of David's new data.
+DONE - add a test for the new directory we have of David's new data.
 - concat is important -> MOST important
     * provide support for pieChart and horizontal bar chart for string based stuff.
 
