--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+- need to work on the compare.js build, seems to be broken when i run it.
+    * be able to change 1 thing.
+DONE - SCSS clean up and break up these files so that there's not just 1 big one.
 DONE - fix the grunt server so we can compile scss or just find command to do scss.
     * did some SCSS refactoring, so that not all the CSS will be in just one big file.
 DONE - when adding a plot, don't rerender all the existing plots, just add one new one. * this causes a bug where everything gets rerendered.
@@ -8,7 +11,7 @@ DONE - add a test for the new directory we have of David's new data.
 
 DONE - Use actual files that are in the URL, rather than hard coded ones.
 - Generate new files using the attribute data.
-- attempt to build compare.js and actually make a change.
+
 
 Memory:
 
