--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+For Oct 22:
+DONE - Be able to reset saved charts, so bad ones don't linger around.
+- Instead of text: First pLot : call it memory bandwidth
+- do error dialog on submit, if you do a weird combo
+- do chart wrap around.
+DONE - work out compare.js stuff.
+
+
 Building Compare.js
 1) - need to work on the compare.js build, seems to be broken when i run it.
     * be able to change 1 thing.
@@ -18,12 +26,6 @@ Composite Charts
     * provide support for pieChart and horizontal bar chart for string based stuff.
 
 
-For Oct 22:
-- Be able to reset saved charts, so bad ones don't linger around.
-- Instead of text: First pLot : call it memory bandwidth
-- do error dialog on submit, if you do a weird combo
-- do chart wrap around.
-DONE - work out compare.js stuff.
 
 
 -  Vuetify
