--- a/TODO
+++ b/TODO
@@ -1,7 +1,14 @@
+Optvis: 20%, Spot: 80%
+
 For Oct 22:
+- For optvis, there should only be one of each "psi", "psi_data", and they should not be strikethrough
+    * only %r15 should be strikethrough
+
+- research possibility to do an Iframe, and pull in the existing code
 DONE - Be able to reset saved charts, so bad ones don't linger around.
 DONE - work out compare.js stuff.
 - Instead of text: First pLot : call it memory bandwidth
+
 - do error dialog on submit, if you do a weird combo
 - do chart wrap around.
 
