make title model implementation such that it automatically calcualtes the title based on a key value pair and continuously updates the title according to whats selected or not selected
Former-commit-id: af77a1e166bf5ceb3bb5106746eadf81a60d3d5b

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - Title: "Iterations", "Memory Bandwidth", "Time", "Power", else use the actual name (it'll be long but hopefully this owon't happen a lot)
+    * I also added a custom map where we can easily add more labels.
 
 DONE - add strcat operation instead of relying on +.
     * which means + strings should be an error.
