fix the wrap around issue for composite horizontal bar charts
Former-commit-id: 2e758573cc543e8849fbbcf75cb19240579648c0

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
+- Stop wrap around from happening for the horizontal bar charts.
 DONE - Get a new icon for memory view: it should have to do with time series, maybe a set of line graphs.
 DONE - Title: "Iterations", "Memory Bandwidth", "Time", "Power", else use the actual name (it'll be long but hopefully this owon't happen a lot)
-    * I also added a custom map where we can easily add more labels.
+DONE - I also added a custom map where we can easily add more labels.
 
 DONE - add strcat operation instead of relying on +.
     * which means + strings should be an error.
